Clean up auth and adds example middleware usage for jwt auth

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PORT=8000
 
-MONGODB_CONNECTION=mongodb://root:password@mongodb:27017
+MONGO_DB_CONNECTION=mongodb://root:password@mongodb:27017/passport_auth_dev
+
+JWT_SECRET_OR_KEY=s0m3$3Cret$h0lyC0d3&$
+JWT_TOKEN_EXPIRATION=18000000
