--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "test:functional-local": "sh scripts/local-integration-tests.sh"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
