--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./rest.Dockerfile
-    image: auth-service:${APP_VERSION:-1.0.0}
+    image: pokedex-back:${APP_VERSION:-1.0.0}
     command: npm run dev
     volumes:
       - "./:/usr/src/app"
