--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth-service",
+  "name": "pokedex-back",
   "version": "1.0.0",
-  "description": "Authentication micro service with Typescript, Nodejs, Express, Passport, MongoDB built on top of ableda/nodejs-template",
+  "description": "Pokedex Api micro service with Typescript, Nodejs, Express, Passport, MongoDB built on top of ableda/nodejs-template",
   "author": "Alex Bleda",
   "repository": "",
   "main": "index.js",
@@ -27,6 +27,7 @@
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
